Create add task functionality

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="col s12 m6">
         <div class="card white ">
             <div class="card-content ">
-                <span class="card-title">Add tasks</span>
+                <span id="add-task-title" class="card-title">Add tasks</span>
                 <div class="row">
                     <form class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input Add your task here="Placeholder" id="first_name" type="text" >
-                                <label for="first_name">Add your task here</label>
+                                <input Add your task here="Placeholder" id="task" type="text" >
+                                <label for="task">Add your task here</label>
                             </div>
 
                         </div>
@@ -37,9 +37,9 @@
                 </div>
             </div>
             <div class="card-action">
-                <span class="card-title">My tasks</span>
+                <span id="my-tasks-title" class="card-title">My tasks</span>
                 <ul class="collection">
-                    <li class="collection-item">My first task
+                   <!-- <li class="collection-item">My first task
                         <a href="#" class="teal-text lighten-2 secondary-content">x</a>
                     </li>
                     <li class="collection-item">My second task
@@ -50,9 +50,9 @@
                     </li>
                     <li class="collection-item">My last task
                         <a href="#" class="teal-text lighten-2 secondary-content">x</a>
-                    </li>
+                    </li>-->
                 </ul>
-                <a href="#" class="btn">Clear All Tasks</a>
+                <a href="#" id="clear-all-tasks" class="btn">Clear All Tasks</a>
             </div>
         </div>
     </div>
