Create save task to logalStorage

--- a/index.html
+++ b/index.html
@@ -9,24 +9,23 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <!-- Fontawesome -->
     <script src="https://kit.fontawesome.com/2d0a1576d1.js" crossorigin="anonymous"></script>
-    <title>Task</title>
+    <title>Tasks</title>
 </head>
 <body>
 <div class="container">
     <!-- Page Content goes here -->
     <div class="row">
     <div class="col s12 m6">
-        <div class="card white ">
+        <div class="card">
             <div class="card-content ">
                 <span id="add-task-title" class="card-title">Add tasks</span>
                 <div class="row">
                     <form class="col s12">
                         <div class="row">
                             <div class="input-field col s6">
-                                <input Add your task here="Placeholder" id="task" type="text" >
+                                <input id="task" type="text">
                                 <label for="task">Add your task here</label>
                             </div>
-
                         </div>
                         <div class="row">
                             <div class="col s6">
