Create delete single task from localStorage

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="card-action">
                 <span id="my-tasks-title" class="card-title">My tasks</span>
                 <ul class="collection">
-                   <li class="collection-item">My first task
+<!--                   <li class="collection-item">My first task
                         <a href="#" class="teal-text lighten-2 secondary-content">x</a>
                     </li>
                     <li class="collection-item">My second task
@@ -49,7 +49,7 @@
                     </li>
                     <li class="collection-item">My last task
                         <a href="#" class="teal-text lighten-2 secondary-content">x</a>
-                    </li>
+                    </li>-->
                 </ul>
                 <a href="#" id="clear-all-tasks" class="btn">Clear All Tasks</a>
             </div>
